--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,3 @@
-dist
-cabal-dev
-*.o
-*.hi
-*.chi
-*.chs.h
-*.dyn_o
-*.dyn_hi
-.virtualenv
-.hpc
-.hsenv
-.cabal-sandbox/
-cabal.sandbox.config
-cabal.config
-*.prof
-*.aux
-*.hp
-.stack-work/
-
-#vim
-*.swp
+.ghc.environment.*
+dist/
+dist-newstyle/
