--- a/consul-haskell.cabal
+++ b/consul-haskell.cabal
@@ -1,37 +1,43 @@
-name:                consul-haskell
-version:             0.4.2
-synopsis:            A consul client for Haskell
+name: consul-haskell
+version: 0.4.2
+synopsis: A consul client for Haskell
 description:
   A consul client for Haskell
   .
   Requires consul 0.5 or later.
-
-license:             BSD3
-license-file:        LICENSE
-author:              Steve Severance
-maintainer:          sseverance@alphaheavy.com
-homepage:            https://github.com/alphaHeavy/consul-haskell
-bug-reports:         https://github.com/alphaHeavy/consul-haskell/issues
-category:            Network
-
-build-type:          Simple
-cabal-version:       >= 1.10
+license: BSD3
+license-file: LICENSE
+author: Steve Severance
+maintainer: sseverance@alphaheavy.com
+homepage: https://github.com/alphaHeavy/consul-haskell
+bug-reports: https://github.com/alphaHeavy/consul-haskell/issues
+category: Network
+build-type: Simple
+cabal-version: >= 1.10
+tested-with: GHC == 7.8.1, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4,
+             GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3,
+             GHC == 8.0.1, GHC == 8.0.2,
+             GHC == 8.2.1, GHC == 8.2.2,
+             GHC == 8.4.1
 
 extra-source-files:
-  tests/Main.hs
+  cabal.project
+  docker-compose.yml
+
+source-repository head
+  type:     git
+  location: https://github.com/alphaHeavy/consul-haskell.git
 
 library
-  default-language:
-    Haskell2010
-  hs-source-dirs:
-    src
+  default-language: Haskell2010
+  hs-source-dirs: src
   exposed-modules:
     Network.Consul
     Network.Consul.Internal
     Network.Consul.Types
   build-depends:
     aeson,
-    base                       >= 4.6 && < 5,
+    base >= 4.7 && < 5,
     base64-bytestring,
     bytestring,
     connection,
@@ -40,30 +46,22 @@ library
     http-client,
     http-client-tls,
     http-types,
-    lifted-async,
-    lifted-base,
-    monad-control >= 1.0,
     network,
     retry,
     stm,
     text,
     transformers,
+    unliftio ^>= 0.2.4,
     unordered-containers,
     vector
-  ghc-options:
-    -Wall
 
 test-suite consul-haskell-test
-  default-language:
-    Haskell2010
-  hs-source-dirs:
-    tests
-  type:
-    exitcode-stdio-1.0
-  main-is:
-    Main.hs
+  default-language: Haskell2010
+  hs-source-dirs: tests
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
   build-depends:
-    base                       >= 4.6 && < 5,
+    base >= 4.6 && < 5,
     consul-haskell,
     http-client,
     network,
@@ -73,11 +71,4 @@ test-suite consul-haskell-test
     text,
     transformers,
     uuid,
-    HUnit                      >= 1.2
-  ghc-options:
-    -Wall
-
-
-source-repository head
-  type:     git
-  location: https://github.com/alphaHeavy/consul-haskell.git
+    HUnit >= 1.2
